--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Grid Layout with Motion Hover Effect | Codrops</title>
+		<title>"Mi Cabeza no me deja pensar" | AldonzaMorgana</title>
 		<meta name="description" content="Grid Layout with Motion Hover Effect and Content Preview" />
 		<meta name="keywords" content="grid, css, layout, template, hover, content, gsap, tweenmax, overlay" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="icon" type="image/png" sizes="32x32" href="http://genyleong.github.io/www/assets/img/logo.png"/>
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
@@ -68,7 +68,7 @@
 							<div class="box__shadow"></div>
 							<img class="box__img" src="img/7.jpg" alt="Some image"/>
 							<h3 class="box__title"><span class="box__title-inner box__title-inner_image_one" data-hover="Concéntrate">Concéntrate</span></h3>
-							<h4 class="box__text"><span class="box__text-inner">Sueña</span></h4>
+							<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2 box__text-inner--reverse">Sueña</span></h4>
 							<p class="box__content">"Run, Forrest, Run!"</p>
 						</div>
 					</a>
