--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
 							<div class="box__deco">&#10064;</div>
 						</div>
 					</a>					
-					
+					<a class="grid__item" href="#preview-5">
+						<div class="box">
+							<div class="box__shadow"></div>
+							<img class="box__img" src="img/intro_cinco.jpg" alt="Some image"/>
+							<h3 class="box__title"><span class="box__title-inner box__title-inner-gris" data-hover="Juan Gris">Juan Gris</span></h3>
+							<h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">MÚSICA</span></h4>
+							<div class="box__deco">&#9834;</div>
+						</div>
+					</a>
 					<a class="grid__item" href="#preview-6">
 						<div class="box">
 							<div class="box__shadow"></div>
@@ -97,16 +105,7 @@
 							<h3 class="box__title"><span class="box__title-inner" data-hover="Existe">Existe</span></h3>
 							<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2 box__text-inner--reverse">SOÑAR</span></h4>
 						</div>
-					</a>
-					<a class="grid__item" href="#preview-5">
-						<div class="box">
-							<div class="box__shadow"></div>
-							<img class="box__img" src="img/intro_cinco.jpg" alt="Some image"/>
-							<h3 class="box__title"><span class="box__title-inner box__title-inner-gris" data-hover="Juan Gris">Juan Gris</span></h3>
-							<h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">MÚSICA</span></h4>
-							<div class="box__deco">&#9834;</div>
-						</div>
-					</a>
+					</a>					
 					<a class="grid__item" href="#preview-10">
 						<div class="box">
 							<div class="box__shadow"></div>
@@ -247,37 +246,22 @@
 				<div class="overlay__item" id="preview-6">
 					<div class="box">
 						<div class="box__shadow"></div>
-						<img class="box__img box__img--original" src="img/original/7.jpg" alt="Some image"/>
-						<h3 class="box__title"><span class="box__title-inner">Concéntrate</span></h3>
-						<h4 class="box__text"><span class="box__text-inner">SUEÑA</span></h4>
+						<img class="box__img box__img--original" src="img/original/11.jpg" alt="Some image"/>
+						<h3 class="box__title box__title--bottom"><span class="box__title-inner">Sueña</span></h3>
+						<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">DIY</span></h4>
 					</div>
 					<p class="overlay__content_image_three">
-						Los que nos damos cuenta de esta mentira, tomamos una posición de protesta y rebeldía, tratando de hacer que las cosas a nuestro juicio tengan sentido.  En vista de que necesitamos la colectividad para lograr cualquier objetivo, desde abrir una puerta hasta cumplir un sueño, nótese cuán difícil es convivir con el mundo y mantenerse independiente. <br>
-						A lo que me refiero es que en la medida de lo posible tratamos de arrancar prejuicios, cuestionar consejos o evadir esa información que se esparce con la intención de que uno actúe de determinada manera.<br>
-						La música es un buen medio de comunicación tanto por las letras como por el significado que le damos a los ritmos. Para muchos ha constituido una fuente de expresión e identidad.<br>
-						<br><br>
-						Es decir es un espacio maravilloso para refugiarse y seguir manteniendo vigentes nuestros sueños a través de la manifestación de ideas, narración de historias y la apropiación de un estilo de vida paralelo sin censura, en donde podemos ser y expresar lo que realmente sentimos pero esto de alguna u otra manera puede llegar a ser un poco intimidante para otros de niveles diferentes de pensamiento.							
+					A veces me cuesta pararme y ejecutar planes porque mi cabeza no me deja pensar en una sola cosa, puedo quedarme horas, con esa voz que me habla y analiza todo a mi alrededor; el pensamiento humano que aprende y desaprende, la parte racional que se alimenta de razones y muchas otras veces de significados.<br>
+					A veces es un poco más sensible que otras y cuando lo es, puedo reconocer y entender a la gente por sus traumas y crianzas, por sus vacíos.  Me fijo en el ser individual. <br>
+					Cuando la voz es crítica, cuando me veo a mi misma primero para ver a los demás, puedo distinguir las ideologías, el funcionamiento del sistema, de la publicidad, del mensaje a proyectar de unos cuantos hacia todos los muchos que nos hemos olvidado de vivir y solo trabajamos para que esta creación humana que se basa en la acumulación de cosas a través del dinero pueda seguir funcionando para los que lo manejan.
 					</p>
-				</div>
+					<p class="overlay__content_image_three">
+					Obviamente, en teoría y gracias a la iteración innegable de las ideologías, cualquiera puede convertirse en uno pero ¿a costa de qué?, es inaudito no darse cuenta que le pertenece a una élite. Y en consecuencia, la gente, la población que al final hace la masa, se adormece.
+					<br><br>
+					Se duerme quien cree en las noticias de televisión, o se fanatiza con alguna postura: se duerme el socialista, el capitalista, el que lleva su vida haciendo deporte y comiendo sano, creyendo que es mejor que el resto. Quién cree que la violencia o la viveza puede representar una solución, quién acepta a quién lo cree también lo hace.					
+					</p>
+				</div>								
 				<div class="overlay__item" id="preview-7">
-						<div class="box">
-							<div class="box__shadow"></div>
-							<img class="box__img box__img--original" src="img/original/11.jpg" alt="Some image"/>
-							<h3 class="box__title box__title--bottom"><span class="box__title-inner">Sueña</span></h3>
-							<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">DIY</span></h4>
-						</div>
-						<p class="overlay__content_image_three">
-						A veces me cuesta pararme y ejecutar planes porque mi cabeza no me deja pensar en una sola cosa, puedo quedarme horas, con esa voz que me habla y analiza todo a mi alrededor; el pensamiento humano que aprende y desaprende, la parte racional que se alimenta de razones y muchas otras veces de significados.<br>
-						A veces es un poco más sensible que otras y cuando lo es, puedo reconocer y entender a la gente por sus traumas y crianzas, por sus vacíos.  Me fijo en el ser individual. <br>
-						Cuando la voz es crítica, cuando me veo a mi misma primero para ver a los demás, puedo distinguir las ideologías, el funcionamiento del sistema, de la publicidad, del mensaje a proyectar de unos cuantos hacia todos los muchos que nos hemos olvidado de vivir y solo trabajamos para que esta creación humana que se basa en la acumulación de cosas a través del dinero pueda seguir funcionando para los que lo manejan.
-						</p>
-						<p class="overlay__content_image_three">
-						Obviamente, en teoría y gracias a la iteración innegable de las ideologías, cualquiera puede convertirse en uno pero ¿a costa de qué?, es inaudito no darse cuenta que le pertenece a una élite. Y en consecuencia, la gente, la población que al final hace la masa, se adormece.
-						<br><br>
-						Se duerme quien cree en las noticias de televisión, o se fanatiza con alguna postura: se duerme el socialista, el capitalista, el que lleva su vida haciendo deporte y comiendo sano, creyendo que es mejor que el resto. Quién cree que la violencia o la viveza puede representar una solución, quién acepta a quién lo cree también lo hace.					
-						</p>
-				</div>
-				<div class="overlay__item" id="preview-8">
 					<div class="box box_index">
 						<div class="box__shadow"></div>
 						<!-- <img class="box__img box__img--original" src="img/intro_seis.jpg" alt="Some image"/> -->
@@ -316,7 +300,7 @@
 
 					</p>
 				</div>
-				<div class="overlay__item" id="preview-9">
+				<div class="overlay__item" id="preview-8">
 					<div class="box box_index">
 						<div class="box__shadow"></div>
 						<!-- <img class="box__img box__img--original" src="img/intro_siete.jpg" alt="Some image"/> -->
@@ -343,6 +327,21 @@
 						a la mierda!!!<br>
 					</p>
 				</div>
+				<div class="overlay__item" id="preview-9">
+					<div class="box">
+						<div class="box__shadow"></div>
+						<img class="box__img box__img--original" src="img/original/7.jpg" alt="Some image"/>
+						<h3 class="box__title"><span class="box__title-inner">Concéntrate</span></h3>
+						<h4 class="box__text"><span class="box__text-inner">SUEÑA</span></h4>
+					</div>
+					<p class="overlay__content_image_three">
+						Los que nos damos cuenta de esta mentira, tomamos una posición de protesta y rebeldía, tratando de hacer que las cosas a nuestro juicio tengan sentido.  En vista de que necesitamos la colectividad para lograr cualquier objetivo, desde abrir una puerta hasta cumplir un sueño, nótese cuán difícil es convivir con el mundo y mantenerse independiente. <br>
+						A lo que me refiero es que en la medida de lo posible tratamos de arrancar prejuicios, cuestionar consejos o evadir esa información que se esparce con la intención de que uno actúe de determinada manera.<br>
+						La música es un buen medio de comunicación tanto por las letras como por el significado que le damos a los ritmos. Para muchos ha constituido una fuente de expresión e identidad.<br>
+						<br><br>
+						Es decir es un espacio maravilloso para refugiarse y seguir manteniendo vigentes nuestros sueños a través de la manifestación de ideas, narración de historias y la apropiación de un estilo de vida paralelo sin censura, en donde podemos ser y expresar lo que realmente sentimos pero esto de alguna u otra manera puede llegar a ser un poco incrédulo para otros de niveles diferentes de pensamiento.						
+					</p>
+				</div>				
 				<div class="overlay__item" id="preview-10">
 					<div class="box">
 						<div class="box__shadow"></div>
@@ -351,7 +350,7 @@
 						<!-- <h4 class="box__text box__text--bottom"><span class="box__text-inner"></span></h4> -->
 					</div>
 					<p class="overlay__content_image_three">
-						David Byrne en su libro "How the music works", hace referencia a Theodor Adorno, filósofo alemán e investigador musical, que considera a la máquina de discos "un aparato que atrae a los incautos a los bares con la promesa de deleite y felicidad. Pero, igual que una droga, en lugar de proporcionar verdadera felicidad la música de una máquina de discos solo crea más deseo de ella." (2014, pág 100) tal vez porque incluso en la posición de protesta y rebeldía, las personas se siguen adormeciendo; se quedan en el surrealismo, en el hedonismo, en romperlo todo porque está mal, y se hacen daño igualmente, a través de las drogas. Es verdad que el ser humano de manera innata tiende a la autodestrucción, pero justamente porque también somos seres racionales es que esa característica no puede ser un factor definitivo para nuestra existencia.
+						No en vano David Byrne en su libro "How the music works", hace referencia a Theodor Adorno, filósofo alemán e investigador musical, quién siguiendo el legado de Schoenberg, postula la filosofía de la nueva música de corte crítico marxista y que considera a la máquina de discos "un aparato que atrae a los incautos a los bares con la promesa de deleite y felicidad. Pero, igual que una droga, en lugar de proporcionar verdadera felicidad la música de una máquina de discos solo crea más deseo de ella." (2014, pág 100) porque incluso en la posición de protesta y rebeldía, las personas se siguen adormeciendo; se quedan en el surrealismo, en el hedonismo, en romperlo todo porque está mal, y se hacen daño igualmente, a través de las drogas. Es verdad que el ser humano de manera innata tiende a la autodestrucción, pero justamente porque también somos seres racionales es que esa característica no puede ser un factor definitivo para nuestra existencia.
 					</p>
 					<p class="overlay__content_image_three">
 						La droga te destruye porque te retrae, te aísla, tampoco es que quiera discutir sobre a qué me estoy refiriendo exactamente con el significado que le doy en estas letras a esa palabra, pero reconozco que desde cualquier punto de vista, uno no debe dejar de hacer cosas que les quitan ese miedo natural a vivir, debido a algún tipo de adormecimiento, conformismo o adicción, se den cuenta o no de ello.
