--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							Así debe ser, amén. Y así se generan las ideologías en verdad.
 					</p>
 					<p class="overlay__content_image_three">							
-							Sin embargo, y por esto es necesario la convergencia de los dos hemisferios del cerebro, quienes se atascan en alguna de estas, están igual de desorientados que los que aceptan que así es la vida y terminan perdiendo el sentido común, la característica innata de exploración se aleja cada vez más con el pasar de los años, nosotros con ellos, buscando aferrarnos a cualquier cosa que llene nuestros vacíos o al menos los cubra por ratos. En lo que muchos se delatan a si mismos cuando tratan de huir de esa dependencia, es que en el aspecto de cuestionarlo todo terminan cayendo en el postmodernismo y la ideología del "todo es relativo".
+							Sin embargo, y por esto es necesario la exploración y entendimiento de la naturaleza humana, quienes se atascan en alguna de estas, están igual de desorientados que los que aceptan que "así es la vida" y terminan perdiendo el sentido común, la característica innata de exploración se aleja cada vez más con el pasar de los años, nosotros con ellos, buscando aferrarnos a cualquier cosa que llene nuestros vacíos o al menos los cubra por ratos. En lo que muchos se delatan a si mismos cuando tratan de huir de esa dependencia, es que en el aspecto de cuestionarlo todo terminan cayendo en el postmodernismo y la ideología del "todo es relativo".
 							<br><br>
 							Este tampoco es el camino. Que podamos tener la capacidad de definir de manera relativa al sistema no quiere decir que el sistema en su misma forma lo sea. Quiero dejar esto por sentado.
 					</p>
