--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</svg>
 		<main>
 			<div class="content">
-				<h3 class="sub_title">Y así como el arcoiris y la refracción de la luz, esta historia no existe más que por ti, porque estás vivo. Todo lo descrito es parte de un personaje ficticio que os invita a reflexionar sobre encontrar nuestro propósito en este poco tiempo que aún nos queda por aquí. Lo único real es la música y estas bandas peruanas que demuestran que el talento no es generacional. Genialidad siempre hubo y habrá, en todos los contextos, lo importante es que encuentre su lugar. </h3>
+				<h3 class="sub_title">Y así como el arcoiris y la refracción de la luz, esta historia no existe más que por ti, porque estás vivo. Todo lo descrito es parte de un personaje ficticio que invita a reflexionar sobre encontrar nuestro propósito en este poco tiempo que aún nos queda por aquí. Lo único real es la música y estas bandas peruanas que demuestran que el talento no es generacional. Genialidad siempre hubo y habrá, en todos los contextos, lo importante es que encuentre su lugar. </h3>
 				<div class="grid">
 					<a class="grid__item" href="#preview-1">
 						<div class="box">
