--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		</svg>
 		<main>
 			<div class="content">
-				<h3 class="sub_title">Y así como el arcoiris y la refracción de la luz, esta historia no existe más que por ti, porque estás vivo. Todo lo descrito es parte de un personaje ficticio que invita a reflexionar sobre encontrar nuestro propósito en este poco tiempo que aún nos queda por aquí. Lo único real es la música y estas bandas peruanas que demuestran que el talento no es generacional. Genialidad siempre hubo y habrá, en todos los contextos, lo importante es que encuentre su lugar. </h3>
+				<h3 class="sub_title">Y así como el arcoiris y la refracción de la luz, esta historia no existe más que por ti, porque estás vivo. Todo lo descrito es parte de un personaje ficticio que invita a reflexionar sobre encontrar nuestro propósito en este poco tiempo que aún nos queda por aquí. Lo único real es la música y estas bandas peruanas que demuestran que el talento no es generacional. Genialidad siempre hubo y habrá, en todos los contextos, lo importante es que encuentre su lugar. 
+				</h3>
 				<div class="grid">
 					<a class="grid__item" href="#preview-1">
 						<div class="box">
@@ -352,11 +353,11 @@
 						David Byrne en su libro "How the music works", hace referencia a Theodor Adorno, filósofo alemán e investigador musical, quién siguiendo el legado de Schoenberg, postula la filosofía de la nueva música de corte crítico marxista y que considera a la máquina de discos por ejemplo, "un aparato que atrae a los incautos a los bares con la promesa de deleite y felicidad. Pero, igual que una droga, en lugar de proporcionar verdadera felicidad la música de una máquina de discos solo crea más deseo de ella." (2014, pág 100) Lo menciono porque he notado que incluso en la posición de protesta y rebeldía, las personas se siguen adormeciendo; se quedan en el surrealismo, en el hedonismo, en romperlo todo porque está mal, y se hacen daño igualmente, a través de las drogas. Es verdad que el ser humano de manera innata tiende a la autodestrucción, pero justamente porque también somos seres racionales es que esa característica no puede ser un factor definitivo para nuestra existencia.
 					</p>
 					<p class="overlay__content_image_three">
-						La droga te destruye porque te retrae, te aísla, tampoco es que quiera discutir sobre a qué me estoy refiriendo exactamente con el significado que le doy en estas letras a esa palabra, pero reconozco que desde cualquier punto de vista, uno no debe dejar de hacer cosas que les quitan ese miedo natural a vivir, debido a algún tipo de adormecimiento, conformismo o adicción, se den cuenta o no de ello.
+						La droga te destruye porque te retrae, te aísla. Creo que no necesito ahondar sobre el uso de esta palabra porque en su renuncia al significado, la voz encuentra libertad para expresarse. Sin embargo, reconozco que desde cualquier punto de vista, uno no debe dejar de hacer cosas que le quitan ese miedo natural a vivir, debido a encontrarse bajo algún tipo de adormecimiento, conformismo o adicción, seamos conscientes o no de ello.
 						<br><br>
-						Por esto es tan necesario lograr el autoconocimiento y la independencia, para evitar la absorción de lo impuesto al que llamamos destino y sus inevitables fracasos.
+						Por esto es tan necesario lograr el autoconocimiento y la independencia, para evitar la absorción de nuestros impulsos o del destino y sus inevitables fracasos.
 						<br><br>
-						Siendo objetivos, todo este dilema alrededor de las cosas que nos distraen de pelear por cumplir nuestros sueños, a lo que yo llamo adormecimiento, puede estar relacionado a las drogas en dos cosas aparentemente contradictorias: que sea provocado por la repetición: la droga como constructor, o que lo acentúe más debido a otras causas: la droga como conductor. O existe y está escondido, o no existe y lo creamos por defectos propios de cualidades subdesarrolladas.  <br>No tengo la respuesta a la pregunta: ¿en qué momento empezamos a conformarnos con lo que vivimos?, solo una crítica basada en mi experiencia. 							
+						Siendo objetivos, todo este dilema alrededor de lo que nos distrae de pelear por cumplir nuestros sueños, a lo que yo llamo adormecimiento, puede estar relacionado a las drogas en dos puntos aparentemente contradictorios: que sea provocado por la repetición;la droga como constructor, o que lo acentúe más debido a otras causas; la droga como conductor. O existe y está escondido, o no existe y lo creamos por defectos propios de cualidades subdesarrolladas.  <br>No tengo la respuesta a la pregunta: ¿en qué momento empezamos a conformarnos con lo que vivimos?, solo una crítica basada en mi experiencia. 							
 					</p>
 				</div>
 				<div class="overlay__item" id="preview-11">
