--- a/index.html
+++ b/index.html
@@ -345,17 +345,18 @@
 				<div class="overlay__item" id="preview-10">
 					<div class="box">
 						<div class="box__shadow"></div>
-						<img class="box__img box__img--original" src="img/original/10.jpg" alt="Some image"/>
+						<img class="box__img box__img--original" src="img/intro_diez.jpg" alt="Some image"/>
 						<h3 class="box__title"><span class="box__title-inner">Existe</span></h3>
 						<!-- <h4 class="box__text box__text--bottom"><span class="box__text-inner"></span></h4> -->
 					</div>
 					<p class="overlay__content_image_three">
 						David Byrne en su libro "How the music works", hace referencia a Theodor Adorno, filósofo alemán e investigador musical, quién siguiendo el legado de Schoenberg, postula la filosofía de la nueva música de corte crítico marxista y que considera a la máquina de discos por ejemplo, "un aparato que atrae a los incautos a los bares con la promesa de deleite y felicidad. Pero, igual que una droga, en lugar de proporcionar verdadera felicidad la música de una máquina de discos solo crea más deseo de ella." (2014, pág 100) Lo menciono porque he notado que incluso en la posición de protesta y rebeldía, las personas se siguen adormeciendo; se quedan en el surrealismo, en el hedonismo, en romperlo todo porque está mal, y se hacen daño igualmente, a través de las drogas. Es verdad que el ser humano de manera innata tiende a la autodestrucción, pero justamente porque también somos seres racionales es que esa característica no puede ser un factor definitivo para nuestra existencia.
+						La droga te destruye porque te retrae, te aísla. Creo que no necesito ahondar sobre el uso de esta palabra porque en su renuncia al significado, la voz encuentra libertad para expresarse.
 					</p>
 					<p class="overlay__content_image_three">
-						La droga te destruye porque te retrae, te aísla. Creo que no necesito ahondar sobre el uso de esta palabra porque en su renuncia al significado, la voz encuentra libertad para expresarse. Sin embargo, reconozco que desde cualquier punto de vista, uno no debe dejar de hacer cosas que le quitan ese miedo natural a vivir, debido a encontrarse bajo algún tipo de adormecimiento, conformismo o adicción, seamos conscientes o no de ello.
+						 Sin embargo, esta alegoría pretende exponer que desde cualquier punto de vista, uno no debe dejar de hacer cosas que le quitan ese miedo natural a vivir, debido a encontrarse bajo algún tipo de estancamiento mental, conformismo o adicción, seamos conscientes o no de ello.
 						<br><br>
-						Por esto es tan necesario lograr el autoconocimiento y la independencia, para evitar la absorción de nuestros impulsos o del destino y sus inevitables fracasos.
+						Por esto es tan necesario lograr el autoconocimiento y la independencia, para evitar ser absorbidos por nuestros impulsos o por el destino y sus inevitables fracasos.
 						<br><br>
 						Siendo objetivos, todo este dilema alrededor de lo que nos distrae de pelear por cumplir nuestros sueños, a lo que yo llamo adormecimiento, puede estar relacionado a las drogas en dos puntos aparentemente contradictorios: que sea provocado por la repetición;la droga como constructor, o que lo acentúe más debido a otras causas; la droga como conductor. O existe y está escondido, o no existe y lo creamos por defectos propios de cualidades subdesarrolladas.  <br>No tengo la respuesta a la pregunta: ¿en qué momento empezamos a conformarnos con lo que vivimos?, solo una crítica basada en mi experiencia. 							
 					</p>
@@ -363,7 +364,7 @@
 				<div class="overlay__item" id="preview-11">
 					<div class="box">
 						<div class="box__shadow"></div>
-						<img class="box__img box__img--original" src="img/original/11.jpg" alt="Some image"/>
+						<img class="box__img box__img--original" src="img/intro_once.jpg" alt="Some image"/>
 						<h3 class="box__title box__title--bottom"><span class="box__title-inner">Sueña</span></h3>
 						<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">SER</span></h4>
 					</div>
