--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Grid Layout with Motion Hover Effect and Content Preview" />
 		<meta name="keywords" content="grid, css, layout, template, hover, content, gsap, tweenmax, overlay" />
 		<meta name="author" content="Codrops" />
-		<link rel="icon" type="image/png" sizes="32x32" href="http://genyleong.github.io/www/assets/img/logo.png"/>
+		<link rel="icon" type="image/png" sizes="32x32" href="https://genyleong.github.io/www/assets/img/logo.png"/>
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
