--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<title>"Mi Cabeza no me deja pensar" | AldonzaMorgana</title>
-		<meta name="description" content="Grid Layout with Motion Hover Effect and Content Preview" />
-		<meta name="keywords" content="grid, css, layout, template, hover, content, gsap, tweenmax, overlay" />
-		<meta name="author" content="Codrops" />
+		<meta name="description" content="Versión digital del fanzine 'Mi cabeza no me deja pensar'" />
+		<meta name="keywords" content="autoconocimiento, punk, reflexión, vida, rebeldía protesta, música, recuerda, concéntrate, existe" />
+		<meta name="author" content="AldonzaMorgana" />
 		<link rel="icon" type="image/png" sizes="32x32" href="https://genyleong.github.io/www/assets/img/logo.png"/>
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
@@ -336,8 +336,8 @@
 					</div>
 					<p class="overlay__content_image_three">
 						Los que nos damos cuenta de esta mentira, tomamos una posición de protesta y rebeldía, tratando de hacer que las cosas a nuestro alrededor y juicio tengan sentido. En vista de que necesitamos la colectividad para lograr cualquier objetivo, desde abrir una puerta hasta cumplir un sueño, nótese cuán difícil es convivir con el mundo y mantenerse independiente. <br>
-						A lo que me refiero es que en la medida de lo posible tratamos de arrancar prejuicios, cuestionar realidades o evadir esa información que se esparce con la intención de que uno actúe de determinada manera.<br>
-						La música es un buen medio de comunicación tanto por las letras como por el significado que le damos a los ritmos. Para muchos ha constituido una fuente de expresión e identidad.<br>
+						A lo que me refiero es que en la medida de lo posible ser independiente implica arrancar prejuicios, cuestionar realidades o evadir esa información que se esparce con la intención de que uno actúe de determinada manera.<br>
+						La música es un buen medio de comunicación para transmitir este mensaje. Para muchos ha constituido una fuente de expresión e identidad.<br>
 						<br><br>
 						Es decir es un espacio maravilloso para refugiarse y seguir manteniendo vigentes nuestros sueños a través de la manifestación de ideas, narración de historias y la apropiación de un estilo de vida paralelo sin censura, en donde podemos ser y expresar lo que realmente sentimos aunque esto de alguna u otra manera puede llegar a ser un poco incrédulo para otros de niveles diferentes de pensamiento.						
 					</p>
