--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 					</div>
 					<p class="overlay__content_image_three">
 						Los que nos damos cuenta de esta mentira, tomamos una posición de protesta y rebeldía, tratando de hacer que las cosas a nuestro alrededor y juicio tengan sentido. En vista de que necesitamos la colectividad para lograr cualquier objetivo, desde abrir una puerta hasta cumplir un sueño, nótese cuán difícil es convivir con el mundo y mantenerse independiente. <br>
-						A lo que me refiero es que en la medida de lo posible tratemos de arrancar prejuicios, cuestionar realidades o evadir esa información que se esparce con la intención de que uno actúe de determinada manera.<br>
+						A lo que me refiero es que en la medida de lo posible tratemos de arrancar prejuicios, cuestionar realidades o evadir información que se esparce con la intención de que uno actúe de determinada manera.<br>
 						La música es un buen medio de comunicación para transmitir este mensaje. Para muchos ha constituido una fuente de expresión e identidad.<br>
 						<br><br>
 						Es decir es un espacio maravilloso para refugiarse y seguir manteniendo vigentes nuestros sueños a través de la manifestación de ideas, narración de historias y la apropiación de un estilo de vida paralelo sin censura, en donde podemos ser y expresar lo que realmente sentimos aunque esto de alguna u otra manera puede llegar a ser un poco incrédulo para otros de niveles diferentes de pensamiento.						
@@ -360,7 +360,7 @@
 						<br><br>
 						Por esto es tan necesario lograr el autoconocimiento y la independencia, para evitar ser absorbidos por nuestros impulsos o por el destino y sus inevitables fracasos.
 						<br><br>
-						No tengo la respuesta a la pregunta: ¿en qué momento empezamos a conformarnos con lo que vivimos?, solo una crítica basada en mi experiencia. <br>
+						No tengo la respuesta a la pregunta: <strong>¿en qué momento empezamos a conformarnos con lo que vivimos?</strong>, solo una crítica basada en mi experiencia. <br>
 						Tal vez todo este dilema alrededor de lo que nos distrae de cumplir nuestros sueños, a lo que yo llamo adormecimiento, puede estar relacionado a las drogas en dos puntos aparentemente contradictorios: que sea provocado por la repetición;la droga como constructor, o que lo acentúe más debido a otras causas; la droga como conductor. Este autoboicot lo tenemos todos y está escondido, o no existe y lo creamos por defectos propios de cualidades subdesarrolladas.  				
 					</p>
 				</div>
@@ -376,7 +376,6 @@
 							
 					</p>
 					<p class="overlay__content_image_three">
-							*****************************************************************
 							Me estreso demasiado, analizo mucho a las personas a mi alrededor y a las distintas ideologías que se forman como burbujas. Si voy a querer hacer algo, voy a necesitar estar lúcida, sin ningún tipo de bloqueo mental. 
 							<br>
 							Por esto siempre pienso en niveles e intensidades del pensamiento humano, porque hay personas que aún en sus debilidades, nunca se perdieron, siempre se mantuvieron firmes defendiendo lo que aman hacer y ser. 
