--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<div class="box__shadow"></div>
 							<img class="box__img" src="img/portada_uno.jpg" alt="Some image"/>
 							<h3 class="box__title"><span class="box__title-inner" data-hover="Hola">Hola</span></h3>
-							<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2 box__text-inner--reverse">¿Por qué?</span></h4>
+							<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2 box__text-inner--reverse">Por qué</span></h4>
 							<!-- <div class="box__deco">&#10155;</div> -->
 							<p class="box__content">"Mi cabeza no me deja pensar"</p>
 						</div>
@@ -50,7 +50,7 @@
 							<div class="box__shadow"></div>
 							<img class="box__img" src="img/portada_dos.jpg" alt="Some image"/>
 							<h3 class="box__title box__title--straight box__title--bottom_image_one"><span class="box__title-inner box__title-inner_image_one" data-hover="Detente">Detente</span></h3>
-							<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2 box__text-inner--reverse">¿Qué?</span></h4>
+							<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2 box__text-inner--reverse">Qué</span></h4>
 							<div class="box__deco box__deco--top">&#10068;</div>
 						</div>
 					</a>
@@ -60,7 +60,7 @@
 							<div class="box__shadow"></div>
 							<img class="box__img" src="img/portada_tres.jpg" alt="Some image"/>
 							<h3 class="box__title"><span class="box__title-inner box__title-inner_image_one" data-hover="Recuerda">Recuerda</span></h3>
-							<h4 class="box__text box__text--topcloser"><span class="box__text-inner box__text-inner--rotated2 box__text-inner--reverse">¿Quién?</span></h4>
+							<h4 class="box__text box__text--topcloser"><span class="box__text-inner box__text-inner--rotated2 box__text-inner--reverse">Vivir</span></h4>
 							<div class="box__deco">&#10064;</div>
 						</div>
 					</a>					
@@ -142,7 +142,7 @@
 						<div class="box__shadow"></div>
 						<img class="box__img box__img--original" src="img/intro_uno.jpg" alt="Some image"/>
 						<h3 class="box__title"><span class="box__title-inner">Hola</span></h3>
-						<h4 class="box__text"><span class="box__text-inner">¿Por qué?</span></h4>
+						<h4 class="box__text"><span class="box__text-inner">Por qué</span></h4>
 						<!-- <div class="box__deco">&#10014;</div> -->
 					</div>
 					<p class="overlay__content_image_one">A veces las cosas no tienen un mayor sentido que salvarte, esto es punk. "Agarra lo que tengas, toca lo que puedas y di lo que quieras, porque de lo que se trata es de salvarte. En esas épocas las opciones que tenías eran, te volvías terrorista, te afincabas en el sistema, te suicidabas...o hacías arte." <cite> Wicho García, Narcosis.</cite></p>
@@ -178,7 +178,7 @@
 						<div class="box__shadow"></div>
 						<img class="box__img box__img--original box__img_image_two" src="img/intro_dos.jpg" alt="me at la noche de barranco"/>
 						<h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner">Detente</span></h3>
-						<h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">¿Qué?</span></h4>
+						<h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Qué</span></h4>
 						<!-- <div class="box__deco box__deco--top">&#10120;</div> -->
 					</div>
 					<p class="overlay__content_image_three">							
@@ -200,7 +200,7 @@
 							<div class="box__shadow"></div>
 							<img class="box__img box__img--original" src="img/intro_tres.jpg" alt="Some image"/>
 							<h3 class="box__title"><span class="box__title-inner">Recuerda</span></h3>
-							<h4 class="box__text box__text--topcloser"><span class="box__text-inner">¿Quién?</span></h4>
+							<h4 class="box__text box__text--topcloser"><span class="box__text-inner">Vivir</span></h4>
 							<!-- <div class="box__deco">&#10032;</div> -->
 						</div>
 						<p class="overlay__content_image_three">
@@ -376,7 +376,6 @@
 							
 					</p>
 					<p class="overlay__content_image_three">
-							*****************************************************************
 							Me estreso demasiado, analizo mucho a las personas a mi alrededor y a las distintas ideologías que se forman como burbujas. Si voy a querer hacer algo, voy a necesitar estar lúcida, sin ningún tipo de bloqueo mental. 
 							<br>
 							Por esto siempre pienso en niveles e intensidades del pensamiento humano, porque hay personas que aún en sus debilidades, nunca se perdieron, siempre se mantuvieron firmes defendiendo lo que aman hacer y ser. 
